--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,13 +4,13 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-<!--          <activity android:name=".CardLife"
+		<activity android:name=".CardLife"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>-->
+        </activity>
         <receiver android:name=".SMSFilter">
 			<intent-filter>
 				<action android:name="android.provider.Telephony.SMS_RECEIVED" />
